--- a/run_to_completion/Makefile
+++ b/run_to_completion/Makefile
@@ -34,12 +34,13 @@ $(error "Please define RTE_SDK environment variable")
 endif
 
 # Default target, can be overridden by command line or environment
+RTE_SDK = /home/tianzhu/dpdk-stable-17.05.2
 RTE_TARGET ?= x86_64-native-linuxapp-gcc
 
 include $(RTE_SDK)/mk/rte.vars.mk
 
 # binary name
-APP = FlowMown-DPDK
+APP = FloWatcher-DPDK
 
 # all source are stored in SRCS-y
 SRCS-y := main.c
