update to DPDK 18.11

--- a/pthread/Makefile
+++ b/pthread/Makefile
@@ -34,7 +34,7 @@ $(error "Please define RTE_SDK environment variable")
 endif
 
 # Default target, can be overridden by command line or environment
-RTE_SDK = /home/tianzhu/dpdk-stable-17.05.2
+# RTE_SDK = /home/tianzhu/dpdk-stable-17.05.2
 RTE_TARGET ?= x86_64-native-linuxapp-gcc
 
 include $(RTE_SDK)/mk/rte.vars.mk
